--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -4,24 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilo2.css">
+    <link rel="stylesheet" href="../estilos/estilo2.css">
     <title>ALICE KELLEN</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
- 
+    
 </head>
 <body>
     <header>
         <h1>Biografia</h1>
     </header>
-   
-        <nav class="navbar">
-            <a href="../index.html">Inicio</a>
-            <a href="#">Biografia</a>
-            <a href="./bibliografia.html">Bibliografia</a>
-            <a href="./presentacion.html">Presentaciones</a>
-            <a href="./contacto.html">Contacto</a>
-        </nav>
-
+    <nav class="navbar">
+        <a href="../index.html">Inicio</a>
+        <a href="#">Biografia</a>
+        <a href="./bibliografia.html">Bibliografia</a>
+        <a href="./presentacion.html">Presentaciones</a>
+        <a href="./contacto.html">Contacto</a>
+    </nav>
     <section class="content">
         <h2>Conociendo a tu escritora favorita</h2>
         <article id="bio">
@@ -34,7 +32,6 @@
             <p>Su primera novela se titula "Llévame a cualquier lugar", una comedia romántica que publicó en Amazon en 2013 y consiguió posicionarse como uno de los libros más vendidos,​ hecho que llamó la atención de varias editoriales, entre ellas NEO, que publicó la novela bajo su sello al año siguiente. Aunque ya estaba en contacto con la editorial New Adult, Alice siguió auto publicándose, y algunas de sus novelas vieron la luz bajo otros sellos editoriales, como Titania, hasta que finalmente se estableció bajo el sello editorial Planeta. Su obra ha sido traducida a una decena de idiomas.</p>
             <div class="imagen-bio"><img src="../IMG/images (1).jpg" alt=""></div>
         </article>
-
     </section>
     <footer id="pie">
         REDES SOCIALES
