--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../estilos/estilo2.css">
     <title>ALICE KELLEN</title>
+    <link rel="icon" type="image/x-icon" href="../img/favicon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     
 </head>
@@ -14,11 +15,11 @@
         <h1>Biografia</h1>
     </header>
     <nav class="navbar">
-        <a href="../index.html">Inicio</a>
-        <a href="#">Biografia</a>
-        <a href="./bibliografia.html">Bibliografia</a>
-        <a href="./presentacion.html">Presentaciones</a>
-        <a href="./contacto.html">Contacto</a>
+        <a class="na" href="../index.html">Inicio</a>
+        <a class="na" href="#">Biografia</a>
+        <a class="na" href="./bibliografia.html">Bibliografia</a>
+        <a class="na" href="./presentacion.html">Presentaciones</a>
+        <a class="na" href="./contacto.html">Contacto</a>
     </nav>
     <section class="content">
         <h2>Conociendo a tu escritora favorita</h2>
