--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/estilo2.css">
     <title>ALICE KELLEN</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+    <link rel="shortcut icon" tipe="imagen.jpg" href="/img/Sin título.png">
 </head>
 <body>
     <article class="pagina1 grid">
@@ -20,11 +21,11 @@
         </section>
 
         <nav class="navbar">      
-            <a href="#">Inicio</a></li>
-            <a href="pages/biografia.html">Biografia</a>
-            <a href="pages/bibliografia.html">Bibliografia</a>
-            <a href="pages/presentacion.html">Presentaciones</a>
-            <a href="pages/contacto.html">Contacto</a>
+            <a class="na" href="#">Inicio</a></li>
+            <a class="na" href="pages/biografia.html">Biografia</a>
+            <a class="na" href="pages/bibliografia.html">Bibliografia</a>
+            <a class="na" href="pages/presentacion.html">Presentaciones</a>
+            <a class="na" href="pages/contacto.html">Contacto</a>
         </nav>
         
         <section class="content">
