cambios de ultimo momento

--- a/Pages/presentacion.html
+++ b/Pages/presentacion.html
@@ -47,15 +47,18 @@
                     <p>Recoleta - Urban MallVicente López 2050 - Recoleta (BUENOS AIRES)(011) 4807-5715 / (011) 4807-7575 recoleta@cuspide.com</p>
                 <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52562.61045636372!2d-58.45168864463366!3d-34.574738054845426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa28e5889bb%3A0x5ed9cfad2bf9693a!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427257374!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
-       
-    <h2>Galeria de Fotos</h2> 
-        <div class="galeria">
-            <img src="../IMG/pres2.jpg" alt="Aqui hay una foto">
-            <img src="../IMG/pres3.jpg" alt="">
-            <img src="../IMG/pres1.jpg" alt="">
-        </div>
+           
+
+        <h2>Galeria de Fotos</h2> 
+            <div class="galeria">
+                <img src="../IMG/pres2.jpg" alt="Aqui hay una foto">
+                <img src="../IMG/pres3.jpg" alt="">
+                <img src="../IMG/pres1.jpg" alt="">
+            </div> 
+    </section>
+
     <footer id="pie">
-        REDES SOCIALES
+        <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Ir al perfil de instagram</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
