--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>ALICE KELLEN</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="shortcut icon" tipe="imagen.jpg" href="/img/Sin título.png">
 </head>
 <body>
     <article class="pagina1 grid">
@@ -35,11 +34,11 @@
         </section>
        
         <footer id="pie">
-            REDES SOCIALES
+            <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Ir al perfil de instagram</a>
         </footer>
 
     </article>
-    https://github.com/AntoneliaValenti/PreEntrega2-Valenti.git<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
 
