modif tercer entrega

--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -80,7 +80,8 @@
           </div>
           <div class="carousel-item">
               <img src="../img/Tu-y-yo-invencibles-destacada.jpg" class="d-block w-100" alt="">
-          </div><div class="carousel-item">
+          </div>
+          <div class="carousel-item">
               <img src="../img/tuyo.jpg" class="d-block w-100" alt="">
           </div>
           <div class="carousel-item">
