arreglos page 1 y font

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="na" href="pages/bibliografia.html">Bibliografia</a>
                 <a class="na" href="pages/presentacion.html">Presentaciones</a>
                 <a class="na" href="pages/contacto.html">Contacto</a>
-        </nav>  
+            </nav>  
         </header>
 
         
@@ -41,26 +41,28 @@
             <p>Es autora de las novelas El día que dejó de nevar en Alaska, la bilogía Deja que ocurra: Todo lo que nunca fuimos y Todo lo que somos juntos,<br> Nosotros en la luna y Las alas de Sophie.</p>
             <p>Es una enamorada de los gatos, adicta al chocolate y a las visitas interminables a librerías.</p>   
         </section>
-       <h2>Pedi tu obra favotita</h2>
+        <div class="nombre pedi">
+            <h2>¡Conseguí tu obra favotita!</h2>
+        </div>
         <section class="venta-libro flex">
             
             <div class="venta-foto">
-                <img src="./img/dondetodobrilla6.jpg">
+                <img class="rounded-circle" src="./img/dondetodobrilla6.jpg">
             </div>
             <div class="venta-foto">
-                <img clas src="./img/mapaan2.jpg">
+                <img class="rounded-circle" src="./img/mapaan2.jpg">
             </div>
             <div class="venta-foto">
-                <img src="./img/Luna-2.jpg">   
+                <img class="rounded-circle" src="./img/Luna-2.jpg">   
             </div>
             <div>
-                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-donde-todo-brilla/373139#soporte/373313">Donde todo brilla</a>
+                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-donde-todo-brilla/373139#soporte/373313">"Donde todo brilla"</a>
             </div>
             <div>
-                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-el-mapa-de-los-anhelos/350110#soporte/350797">El mapa de los anhelos</a>
+                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-el-mapa-de-los-anhelos/350110#soporte/350797">"El mapa de los anhelos"</a>
             </div>
             <div>
-                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-nosotros-en-la-luna/310721#soporte/340656">Nosotros en la luna</a>
+                <a class="planeta" href="https://www.planetadelibros.com.ar/libro-nosotros-en-la-luna/310721#soporte/340656">"Nosotros en la luna"</a>
             </div>
         </section>
 
