--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -12,38 +12,58 @@
   </head>
 <body>
     <header>
+      <div class="nombre titulo">
         <h1>Bibliografia</h1>
+      </div>
     </header>
-      <nav class="navbar">
-          <a class="na" href="../index.html">Inicio</a>
-          <a class="na" href="./biografia.html">Biografia</a>
-          <a class="na" href="#">Bibliografia</a>
-          <a class="na" href="./presentacion.html">Presentaciones</a>
-          <a class="na" href="./contacto.html">Contacto</a>
-      </nav>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+          <span class="navbar-toggler-icon"></span> 
+      </button>
+      
+      <div class="collapse navbar-collapse" id="opciones">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="../index.html">Home</a>
+              </li>
+              <li class="navbar-item">
+                  <a class="nav-link" href="./biografia.html">Biografia</a>
+              </li>
+              <li class="navbar-item">
+                  <a class="nav-link" href="#">Bibliografia</a>
+              </li>
+              <li class="navbar-item">
+                  <a class="nav-link" href="./presentacion.html">Presentaciones</a>
+              </li>
+              <li class="navbar-item">
+                  <a class="nav-link" href="./contacto.html">Contacto</a>
+              </li>
+          </ul>
+      </div>
+  </nav>  
         
     <section class="content">
         <h2>Sus obras...</h2>
-        <div id="obras">
-            <h3>Serie VOLVER A TI</h3>
+        <div class="obras">
+            <h3>-Serie VOLVER A TI-</h3>
               <ul>
                 <li>13 razones para volver a verte (2015), Titania (Ediciones Urano)</li>
                 <li>23 otoños antes de ti (2017), Titania (Ediciones Urano)</li>
                 <li>13 locuras que regalarte (2018), Titania (Ediciones Urano).</li>
               </ul>
 
-            <h3>Biologia TU</h3>
+            <h3>-Biologia TU-</h3>
               <ul>
                 <li>Otra vez tú (2014), Editorial Planeta.</li>
                 <li>vez tú (2017), Editorial Planeta.</li> 
               </ul>
 
-            <h3>Biologia DEJA QUE OCURRA</h3>
+            <h3>-Biologia DEJA QUE OCURRA-</h3>
               <ul>
                 <li>Todo lo que nunca fuimos (2019), Editorial Planeta.</li>
                 <li>Todo lo que somos juntos (2020), Editorial Planeta.</li>
               </ul>
-            <h3>Autoconclusivas</h3>
+            <h3>-Autoconclusivas-</h3>
                 <ul>
                   <li>Llévame a cualquier lugar (2013), Plataforma Editorial.</li>
                   <li>Sigue lloviendo (2015), auto publicado.</li>
