--- a/Pages/presentacion.html
+++ b/Pages/presentacion.html
@@ -12,44 +12,88 @@
 </head>
 <body>
     <header>
-        <h1>Presentacion</h1>
-    </header>
-    <nav class="navbar">
-        <a class="na" href="../index.html">Inicio</a>
-        <a class="na" href="./biografia.html">Biografia</a>
-        <a class="na" href="./bibliografia.html">Bibliografia</a>
-        <a class="na" href="#">Presentaciones</a>
-        <a class="na" href="./contacto.html">Contacto</a>
-    </nav>   
+        <div class="nombre titulo">
+          <h1>Presentación</h1>
+        </div>
+      </header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+            <span class="navbar-toggler-icon"></span> 
+        </button>
+    <div class="collapse navbar-collapse" id="opciones">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./biografia.html">Biografia</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./bibliografia.html">Bibliografia</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="#">Presentaciones</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+        </ul>
+    </div>
+    </nav>
     <section class="content tour">
         <h2>Tour de firmas en Argentina</h2>
             
-        <h3>Septiembre 2023</h3>
+        <h3>-Septiembre 2023-</h3>
             <section class="content firm">
-                <h4>Jueves 07</h4>
-                <div class="p-mapa"> 
-                    <p>Santa Fe - Village CinesEva Perón 5856 - Rosario (SANTA FE)(0341) 4570889rosario@cuspide.com</p>
+                <div class="h4">
+                    <h4>Jueves 07</h4>
                 </div>
-                <div class="map"><iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.629609736104!2d-60.70355682509835!3d-32.93438287126785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b65335cd867b37%3A0xb1710ba61692363e!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427928230!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+                <div class="p-mapa"> 
+                    <p>Santa Fe - Eva Perón 5856 - (SANTA FE)<br>(0341) 4570889rosario@cuspide.com</p>
+                </div>
+                <div class="map">
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3348.629609736104!2d-60.70355682509835!3d-32.93438287126785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b65335cd867b37%3A0xb1710ba61692363e!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427928230!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>    
+
             <section class="content firm">
-                <h4>Sabado 10</h4>
-                    <p>Córdoba - Gral. Paz 57 - Córdoba (CÓRDOBA)(0351) 4246469 cordoba@cuspide.com</p>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.9858224082045!2d-64.18928232518086!3d-31.414516696159605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28250b61931%3A0x7f5fe61a687d118b!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427856369!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="h4">
+                    <h4>Sabado 10</h4>
+                </div>
+                <div class="p-mapa">
+                    <p>Córdoba - Gral. Paz 57 - (CÓRDOBA)<br>(0351) 4246469 cordoba@cuspide.com</p>
+                </div>    
+                <div class="map">
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.9858224082045!2d-64.18928232518086!3d-31.414516696159605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a28250b61931%3A0x7f5fe61a687d118b!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427856369!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div> 
             </section>
+
             <section class="content firm">
-                <h4>Jueves 14</h4>
-                    <p>Mendoza - San Martín 931 - Mendoza (MENDOZA)(0261) 4238195 mendoza931@cuspide.com</p>
+                <div class="h4">
+                    <h4>Jueves 14</h4>
+                </div>
+                <div class="p-mapa">
+                    <p>Mendoza - San Martín 931 - (MENDOZA)<br>(0261) 4238195 mendoza931@cuspide.com</p>
+                </div>
+                <div class="map">
                 <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.2236544209713!2d-68.8398046!3d-32.8922545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x967e091759427751%3A0x69e7512a51a47fc3!2zQ8O6c3BpZGU!5e0!3m2!1ses-419!2sar!4v1686427753465!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
+
             <section class="content firm">
-                <h4>Sabado 16</h4>
-                    <p>Recoleta - Urban MallVicente López 2050 - Recoleta (BUENOS AIRES)(011) 4807-5715 / (011) 4807-7575 recoleta@cuspide.com</p>
-                <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52562.61045636372!2d-58.45168864463366!3d-34.574738054845426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa28e5889bb%3A0x5ed9cfad2bf9693a!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427257374!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="h4">  
+                    <h4>Sabado 16</h4>
+                </div>
+                <div class="p-mapa">
+                    <p>Recoleta - Vicente López 2050 - (BUENOS AIRES)<br>(011) 4807-5715 recoleta@cuspide.com</p>
+                </div>
+                <div class="map">
+                    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52562.61045636372!2d-58.45168864463366!3d-34.574738054845426!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaa28e5889bb%3A0x5ed9cfad2bf9693a!2sC%C3%BAspide%20Libros!5e0!3m2!1ses-419!2sar!4v1686427257374!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
            
 
-        <h2>Galeria de Fotos</h2> 
+        <h2>-Galeria de Fotos-</h2> 
             <div class="galeria">
                 <img src="../IMG/pres2.jpg" alt="Aqui hay una foto">
                 <img src="../IMG/pres3.jpg" alt="">
