--- a/index.html
+++ b/index.html
@@ -12,13 +12,33 @@
 <body>
     <article class="pagina1 grid">
         <header>
-            <h1>Alice Kellen</h1> 
-            <nav class="navbar">      
-                <a class="na" href="#">Inicio</a></li>
-                <a class="na" href="pages/biografia.html">Biografia</a>
-                <a class="na" href="pages/bibliografia.html">Bibliografia</a>
-                <a class="na" href="pages/presentacion.html">Presentaciones</a>
-                <a class="na" href="pages/contacto.html">Contacto</a>
+            <div class="nombre titulo">
+                <h1>Alice Kellen</h1>
+            </div>
+            <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+                    <span class="navbar-toggler-icon"></span> 
+                </button>
+                
+                <div class="collapse navbar-collapse" id="opciones">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="./pages/biografia.html">Biografia</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="./pages/bibliografia.html">Bibliografia</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="./pages/presentacion.html">Presentaciones</a>
+                        </li>
+                        <li class="navbar-item">
+                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
             </nav>  
         </header>
 
