--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -12,14 +12,33 @@
 </head>
 <body>
     <header>
-        <h1>Biografia</h1>
-    </header>
-    <nav class="navbar">
-        <a class="na" href="../index.html">Inicio</a>
-        <a class="na" href="#">Biografia</a>
-        <a class="na" href="./bibliografia.html">Bibliografia</a>
-        <a class="na" href="./presentacion.html">Presentaciones</a>
-        <a class="na" href="./contacto.html">Contacto</a>
+        <div class="nombre titulo">
+          <h1>Biografia</h1>
+        </div>
+      </header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
+            <span class="navbar-toggler-icon"></span> 
+        </button>
+        <div class="collapse navbar-collapse" id="opciones">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="#">Biografia</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./bibliografia.html">Bibliografia</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./presentacion.html">Presentaciones</a>
+            </li>
+            <li class="navbar-item">
+                <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+        </ul>
+        </div>
     </nav>
     <section class="content">
         <h2>Conociendo a tu escritora favorita</h2>
