--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <article class="pagina1 grid">
         <header>
-            <div class="nombre titulo">
+            <div class="nombre titulo flex">
                 <h1>Alice Kellen</h1>
             </div>
             <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
