--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -12,7 +12,7 @@
   </head>
 <body>
     <header>
-      <div class="nombre titulo">
+      <div class="nombre titulo flex">
         <h1>Bibliografia</h1>
       </div>
     </header>
