--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <div class="nombre titulo">
+        <div class="nombre titulo flex">
           <h1>Biografia</h1>
         </div>
       </header>
