--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../estilos/estilo2.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>ALICE KELLEN</title>
     <link rel="icon" type="image/x-icon" href="../img/favicon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -13,10 +13,10 @@
 <body>
     <header>
         <div class="nombre titulo flex">
-          <h1>Biografia</h1>
+          <h1>-Biografia-</h1>
         </div>
-      </header>
-    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+      
+      <nav class="navbar navbar-expand-sm style="background-color: rgb(216, 201, 226) id="nav">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
             <span class="navbar-toggler-icon"></span> 
         </button>
@@ -40,6 +40,7 @@
         </ul>
         </div>
     </nav>
+</header>
     <section class="content">
         <h2>Conociendo a tu escritora favorita</h2>
         <article id="bio">
