--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/estilo2.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>ALICE KELLEN</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
@@ -12,10 +12,10 @@
 <body>
     <article class="pagina1 grid">
         <header>
-            <div class="nombre titulo flex">
-                <h1>Alice Kellen</h1>
+            <div class="nombre titulo">
+                <h1>-Alice Kellen-</h1>
             </div>
-            <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+            <nav class="navbar navbar-expand-sm style="background-color: rgb(216, 201, 226) id="nav">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#opciones">
                     <span class="navbar-toggler-icon"></span> 
                 </button>
