arreglos alt y agr mixin

--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -81,31 +81,31 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/La-teoria-de-los-archipielagos-destacada.jpg" class="d-block w-100" alt="">
+          <img src="../img/La-teoria-de-los-archipielagos-destacada.jpg" class="d-block w-100" alt="foto libro la teoria de los archipielagos">
         </div>
         <div class="carousel-item">
-          <img src="../img/el-chico-que-dibujaba-constelaciones-destacada.jpg" class="d-block w-100" alt="">
+          <img src="../img/el-chico-que-dibujaba-constelaciones-destacada.jpg" class="d-block w-100" alt="foto libro el chico que dibujaba constelaciones">
         </div>
         <div class="carousel-item">
-          <img src="../img/El-mapa-de-los-anhelos-destacada.jpg" class="d-block w-100" alt="">
+          <img src="../img/El-mapa-de-los-anhelos-destacada.jpg" class="d-block w-100" alt="foto libro ek mapa de los anhelos">
         </div> 
         <div class="carousel-item">
-          <img src="../img/las-alas-de-sophie-destacada.jpg" class="d-block w-100" alt="">
+          <img src="../img/las-alas-de-sophie-destacada.jpg" class="d-block w-100" alt="foto libro las alas de sophie">
           </div> 
           <div class="carousel-item">
-            <img src="../img/todo-lo-que-somos-juntos-destada.jpg" class="d-block w-100" alt="">
+            <img src="../img/todo-lo-que-somos-juntos-destada.jpg" class="d-block w-100" alt="foto libro todo lo que somos">
           </div> 
           <div class="carousel-item">
-            <img src="../img/todo-lo-que-nunca-fuimos-destacada-1.jpg" class="d-block w-100" alt="">
+            <img src="../img/todo-lo-que-nunca-fuimos-destacada-1.jpg" class="d-block w-100" alt="foto libro tpdp lo que fuimos juntos">
           </div>
           <div class="carousel-item">
-              <img src="../img/Tu-y-yo-invencibles-destacada.jpg" class="d-block w-100" alt="">
+              <img src="../img/Tu-y-yo-invencibles-destacada.jpg" class="d-block w-100" alt="fotos tu y yo invencibles">
           </div>
           <div class="carousel-item">
-              <img src="../img/tuyo.jpg" class="d-block w-100" alt="">
+              <img src="../img/tuyo.jpg" class="d-block w-100" alt="tu y yo">
           </div>
           <div class="carousel-item">
-            <img src="../img/donde.jpg" class="d-block w-100" alt="">
+            <img src="../img/donde.jpg" class="d-block w-100" alt="foto libro donde todo brilla">
           </div>       
           <a href="#carouselExampleControls" class="carousel-control-prev" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
