--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -51,7 +51,7 @@
             <p>Quiso estudiar Historia del Arte, pero al no obtener suficiente nota en la prueba de Selectividad (examen), empezó a estudiar Filología Española, carrera que la decepcionó y abandonó en poco tiempo. Tras abandonar los estudios universitarios, empezó una empresa de marketing con su marido, y no fue hasta la publicación de su primer libro, que empezó a dedicarse de forma exclusiva a la escritura.​</p>
             
             <p>Su primera novela se titula "Llévame a cualquier lugar", una comedia romántica que publicó en Amazon en 2013 y consiguió posicionarse como uno de los libros más vendidos,​ hecho que llamó la atención de varias editoriales, entre ellas NEO, que publicó la novela bajo su sello al año siguiente. Aunque ya estaba en contacto con la editorial New Adult, Alice siguió auto publicándose, y algunas de sus novelas vieron la luz bajo otros sellos editoriales, como Titania, hasta que finalmente se estableció bajo el sello editorial Planeta. Su obra ha sido traducida a una decena de idiomas.</p>
-            <div class="imagen-bio"><img src="../IMG/images (1).jpg" alt=""></div>
+            <div class="imagen-bio"><img src="../IMG/images (1).jpg" alt="foto escritora con tres de sus libros"></div>
         </article>
     </section>
     <footer id="pie">
