--- a/Pages/presentacion.html
+++ b/Pages/presentacion.html
@@ -96,9 +96,9 @@
 
         <h2>-Galeria de Fotos-</h2> 
             <div class="galeria">
-                <img src="../IMG/pres2.jpg" alt="Aqui hay una foto">
-                <img src="../IMG/pres3.jpg" alt="">
-                <img src="../IMG/pres1.jpg" alt="">
+                <img src="../IMG/pres2.jpg" alt="foto de la autora en presentaciones de libros">
+                <img src="../IMG/pres3.jpg" alt="foto de la autora en presentaciones de libros">
+                <img src="../IMG/pres1.jpg" alt="foto de la autora en presentaciones de libros">
             </div> 
     </section>
 
