--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <section class="venta-libro flex">
             
             <div class="venta-foto">
-                <img class="rounded-circle" src="./img/dondetodobrilla6.jpg">
+                <img class="rounded-circle" src="./img/dondetodobrilla6.jpg" alt="foto libro donde todo brilla">
             </div>
             <div class="venta-foto">
-                <img class="rounded-circle" src="./img/mapaan2.jpg">
+                <img class="rounded-circle" src="./img/mapaan2.jpg" alt="foto libro mapa de los anhelos">
             </div>
             <div class="venta-foto">
-                <img class="rounded-circle" src="./img/Luna-2.jpg">   
+                <img class="rounded-circle" src="./img/Luna-2.jpg" alt="foto libro nosotros en la luna">   
             </div>
             <div>
                 <a class="planeta" href="https://www.planetadelibros.com.ar/libro-donde-todo-brilla/373139#soporte/373313">"Donde todo brilla"</a>
