modificacione y club de lectura

--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -42,7 +42,7 @@
     </nav>
 </header>
     <section class="content">
-        <h2>Conociendo a tu escritora favorita</h2>
+        <h2>-Conociendo a tu escritora favorita-</h2>
         <article id="bio">
             <p>Alice Kellen (Valencia, 1989) es una escritora española de literatura romántica juvenil y adulta. Comenzó su carrera como escritora en 2013 con Llévame a cualquier lugar y ha seguido publicando hasta la actualidad, contando ya con quince libros en el mercado.</p>
         
@@ -54,8 +54,34 @@
             <div class="imagen-bio"><img src="../IMG/images (1).jpg" alt="foto escritora con tres de sus libros"></div>
         </article>
     </section>
+    <section class="club">
+        <div class="tit-club">
+            <h2>-SUMATE-</h2>
+            <h3>Club de lectura</h3>
+            <p>
+                Un club de lectura en tu bandeja de entrada. Es gratis!<br> Todos los meses un nuevo libro para leer elegido por una persona distinta. Cada semana nos acompañamos en la lectura!<br> Nos conectamos por zoom todos los jueves a las 19 hs para compartir y debatir un nuevo capítulo.  
+            </p>
+            <p>
+                Seguinos en instagram para enterarte de nuestras noticias:
+                <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Clubdelectura_</a>        
+            </p>
+        </div>
+        <article class="img-club">
+            <div>
+                <p>
+                    Tambien podras acceder a imagenes inéditas sobre las obras: 
+                </p>
+            </div>
+            <div class="i-club">
+                <img class="imag-club" src="../img/lib1.jpeg" alt="imagen libro">
+                <img class="imag-club" src="../img/lib2.jpeg" alt="imagen libro">
+                <img class="imag-club" src="../img/lib3.jpeg" alt="imagen libro">
+                <img class="imag-club" src="../img/lib4.jpeg" alt="imagen libro">
+            </div>
+    </section>
     <footer id="pie">
-        <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Ir al perfil de instagram</a>
+        <img class="instagram" src="../img/instagram.jpg" alt="logo instagram">
+        <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Alicekellen_</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
