--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="alice kellen obras literarias">
+    <meta name="keywords" content="alice kellen libro escritora"
     <link rel="stylesheet" href="./css/styles.css">
     <title>ALICE KELLEN</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
@@ -89,7 +91,8 @@
 
 
         <footer id="pie">
-            <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Ir al perfil de instagram</a>
+            <img class="instagram" src="./img/instagram.jpg" alt="logo instagram">
+            <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Alicekellen_</a>
         </footer>
 
     </article>
