--- a/Pages/presentacion.html
+++ b/Pages/presentacion.html
@@ -103,7 +103,8 @@
     </section>
 
     <footer id="pie">
-        <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Ir al perfil de instagram</a>
+        <img class="instagram" src="../img/instagram.jpg" alt="logo instagram">
+        <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">alicekellen_</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
