--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="alice kellen obras literarias">
-    <meta name="keywords" content="alice kellen libro escritora"
+    <meta name="keywords" content="alice kellen libro escritora presentacion firmas">
     <link rel="stylesheet" href="./css/styles.css">
     <title>ALICE KELLEN</title>
     <link rel="icon" type="image/x-icon" href="./img/favicon.jpg">
