--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -78,7 +78,7 @@
                 </ul>
         </div>
     </section>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExample" class="carousel slide">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../img/La-teoria-de-los-archipielagos-destacada.jpg" class="d-block w-100" alt="foto libro la teoria de los archipielagos">
@@ -107,20 +107,22 @@
           <div class="carousel-item">
             <img src="../img/donde.jpg" class="d-block w-100" alt="foto libro donde todo brilla">
           </div>       
-          <a href="#carouselExampleControls" class="carousel-control-prev" role="button" data-slide="prev">
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
-          </a>
-          <a href="#carouselExampleControls" class="carousel-control-next" role="button" data-slide="next">
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
-          </a>
-        </div>
+          </button>
       </div>
+    </div>
   <footer id="pie">
     <img class="instagram" src="../img/instagram.jpg" alt="logo instagram">
     <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Alicekellen_</a>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+  crossorigin="anonymous"></script> 
 </body>
 </html>
