--- a/Pages/biografia.html
+++ b/Pages/biografia.html
@@ -83,6 +83,8 @@
         <img class="instagram" src="../img/instagram.jpg" alt="logo instagram">
         <a class="na in" href="https://instagram.com/alicekellen_?igshid=MzRlODBiNWFlZA==" title="ir a instagram">Alicekellen_</a>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
 </body>
 </html>
