--- a/Pages/bibliografia.html
+++ b/Pages/bibliografia.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="alice kellen obras literarias">
+    <meta name="keywords" content="alice kellen volver a ti luna anhelos fuimos somos">
     <link rel="stylesheet" href="../css/styles.css">
     <title>ALICE KELLEN</title>
     <link rel="icon" href="../img/favicon.jpg" type="image/x-icon" >
